--- a/website/app/[locale]/(root)/docs/installation/laravel/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/laravel/static-extraction/content.mdx
@@ -1,9 +1,10 @@
 import StaticExtractionIntro from '../../../rendering-modes/components/StaticExtractionIntro.mdx'
 
 <StaticExtractionIntro img={{
-    src: "/images/laravel-dev.png",
+    ...require('~/public/images/laravel-dev.png').default,
+    dark: require('~/public/images/laravel-dev@dark.png').default,
     alt: 'Laravel and Master CSS',
-    width: 665, height: 400, hasDark: true }} />
+    width: 665, height: 400 }} />
 
 ---
 
