--- a/website/app/[locale]/(root)/docs/rendering-modes/components/StaticExtractionIntro.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/components/StaticExtractionIntro.mdx
@@ -32,6 +32,6 @@ Master CSS [Static Extraction](/docs/rendering-modes/static-extraction) integrat
         </Feature>
     </Features>
     {props.img && <div className="flex:1|1|65%@sm">
-        <ImageCallToPreview {...props.img} imgClass="outline:1|solid|frame outline-offset:-1 r:6" />
+        <ImageCallToPreview {...props.img} />
     </div>}
 </div>
