--- a/website/app/[locale]/(root)/docs/installation/blazor/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/blazor/content.mdx
@@ -1,11 +1,11 @@
 import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRenderingIntro.mdx'
 
 <RuntimeRenderingIntro img={{
-
     href: "https://blazor.rr.rc.css.master.co",
-    src: "/images/blazor-dev.png",
+    ...require('~/public/images/blazor-dev.png').default,
+    dark: require('~/public/images/blazor-dev@dark.png').default,
     alt: 'Blazor and Master CSS',
-    width: 665, height: 400, hasDark: true }} />
+    width: 665, height: 400 }} />
 
 ---
 
