--- a/website/app/[locale]/(root)/docs/installation/react/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/react/content.mdx
@@ -2,9 +2,10 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
 
 <ProgressiveRenderingIntro img={{
     href: "https://react.pr.rc.css.master.co",
-    src: "/images/react-dev.png",
+    ...require('~/public/images/react-dev.png').default,
+    dark: require('~/public/images/react-dev@dark.png').default,
     alt: 'Vite and Master CSS',
-    width: 665, height: 400, hasDark: true }} />
+    width: 665, height: 400 }} />
 
 ---
 
