--- a/website/app/[locale]/(root)/docs/installation/vuejs/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/vuejs/runtime-rendering/content.mdx
@@ -1,11 +1,11 @@
 import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRenderingIntro.mdx'
 
 <RuntimeRenderingIntro img={{
-
     href: "https://vuejs.rr.rc.css.master.co",
-    src: "/images/vuejs-dev.png",
+    ...require('~/public/images/vuejs-dev.png').default,
+    dark: require('~/public/images/vuejs-dev@dark.png').default,
     alt: 'Vue.js and Master CSS',
-    width: 665, height: 400, hasDark: true }} />
+    width: 665, height: 400 }} />
 
 ---
 
