Docs: Update Tailwind CSS migration documentation

--- a/website/app/[locale]/(root)/docs/migration/content.mdx
+++ b/website/app/[locale]/(root)/docs/migration/content.mdx
@@ -1,5 +1,5 @@
 import migrations from 'websites/data/migrations'
 
-<IconButtons url="/docs/installation">
+<IconButtons url="/docs/migration">
     {migrations}
 </IconButtons>
