--- a/website/app/[locale]/(root)/docs/migration/content.mdx
+++ b/website/app/[locale]/(root)/docs/migration/content.mdx
@@ -1,5 +1,16 @@
 import migrations from 'websites/data/migrations'
 
+## Frameworks
 <IconButtons url="/docs/migration">
-    {migrations}
+    {migrations.framework}
+</IconButtons>
+
+## Languages
+<IconButtons url="/docs/migration">
+    {migrations.language}
+</IconButtons>
+
+## CSS-in-JS
+<IconButtons url="/docs/migration">
+    {migrations.cssInJS}
 </IconButtons>
