Refactor Blazor content to remove unnecessary image props

--- a/website/app/[locale]/(root)/docs/installation/blazor/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/blazor/content.mdx
@@ -1,11 +1,6 @@
 import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRenderingIntro.mdx'
 
-<RuntimeRenderingIntro img={{
-    href: "https://blazor.rr.rc.css.master.co",
-    ...require('~/public/images/blazor-dev.png').default,
-    dark: require('~/public/images/blazor-dev@dark.png').default,
-    alt: 'Blazor and Master CSS',
-    width: 665, height: 400 }} />
+<RuntimeRenderingIntro />
 
 ---
 
