--- a/website/app/[locale]/(root)/docs/installation/blazor/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/blazor/static-extraction/content.mdx
@@ -1,11 +1,6 @@
 import StaticExtractionIntro from '../../../rendering-modes/components/StaticExtractionIntro.mdx'
 
-<StaticExtractionIntro img={{
-    href: "https://blazor.se.rc.css.master.co",
-    ...require('~/public/images/blazor-dev.png').default,
-    dark: require('~/public/images/blazor-dev@dark.png').default,
-    alt: 'Blazor and Master CSS',
-    width: 665, height: 400 }} />
+<StaticExtractionIntro />
 
 ---
 
