Update color section in content.mdx

--- a/website/app/[locale]/(root)/docs/colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/colors/content.mdx
@@ -3,7 +3,7 @@
 
 ---
 
-## Basic usage
+## Customizing colors
 ### Add a color
 Add color variables using `#000`, `rgb(0 0 0)`, or `hsl(0 0% 0%)`.
 <Code lang="js" name="master.css.js">{require('!!raw-loader!../../../../../../packages/server/tests/add-a-color/config.js').default}</Code>
