Fix typo in Master CSS description

--- a/website/app/[locale]/(root)/docs/migration/tailwindcss/content.mdx
+++ b/website/app/[locale]/(root)/docs/migration/tailwindcss/content.mdx
@@ -1,6 +1,6 @@
 **Tailwind CSS** is a utility-first CSS framework that empowers you to select corresponding values for your requirements from a plethora of defined constraints, such as `text-sm`, `pt-4`, `lg:w-9`, and more.
 
-**Master CSS** is a markup-driven CSS language with smart syntax that allows you to construct your user interface using structured and native CSS-like syntax, such as `font:14`, `pt:16`, `w:36@md`, instead of referencing tables or relying on memory.
+**Master CSS** is a markup-driven CSS language with smart syntax that allows you to construct your user interface using structured and native-like syntax, such as `font:14`, `pt:16`, `w:36@md`, instead of referencing tables or relying on memory.
 
 Our syntax concepts draw inspiration from [Sass](https://sass-lang.com) and [TypeScript](https://www.typescriptlang.org).
 
