--- a/website/app/[locale]/(root)/docs/migration/v1/content.mdx
+++ b/website/app/[locale]/(root)/docs/migration/v1/content.mdx
@@ -46,7 +46,7 @@ Integrate Master CSS progressive rendering into your Nuxt.js project using the n
 ```ts name=nuxt.config.ts
 export default defineNuxtConfig({
     modules: [
-        '@master/css.nuxt'
++        '@master/css.nuxt'
     ]
 })
 ```
