Update category names in metadata files

--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -40,7 +40,7 @@ Our goal for our upcoming v2 docs is to present a comprehensive and elegantly cr
             <Documents category='Syntax Tutorial' />
             <Documents category='Fundamentals' />
             <Documents category='Production Optimization' />
-            <Documents category='Customization' />
+            <Documents category='Configuration' />
             <Documents category='Enhanced Service' />
             <Documents category='API Reference' />
             <Documents category='Accessibility' />
