--- a/website/app/[locale]/(root)/docs/installation/vite/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/vite/content.mdx
@@ -71,11 +71,11 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
     <Step $row>
         <StepL>
             ### <StepNum />Initialize configuration file
-            Run `npx mcss init` to create a configuration file [master.css.ts](/docs/configuration).
+            Run `npx @master/css init` to create a configuration file [master.css.ts](/docs/configuration).
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx mcss init
+            npx @master/css init
             ```
         </StepR>
     </Step>
