Update dependencies and configuration files

--- a/website/app/[locale]/(root)/docs/animation/content.mdx
+++ b/website/app/[locale]/(root)/docs/animation/content.mdx
@@ -96,7 +96,7 @@ Apply styles based on different states using [selectors](/docs/state-selectors) 
 ```
 
 ### Based on motion preferences
-Use `@motion` or `@reduced-motion` to style an element based on user specific motion preferences.
+Use `@motion` or `@reduced-motion` to style an element based on user-specific motion preferences.
 ```html
 <svg class="@fade|.5s**@motion**">…</svg>
 ```
