Add localization and translation support

--- a/website/i18n/tw.json
+++ b/website/i18n/tw.json
@@ -11,6 +11,12 @@
     "Fundamentals": "基礎原理",
     "Comparison": "比較",
     "Production Optimization": "效能優化",
+    "Variables & Modes": "變數與模式",
+    "Colors": "色彩",
+    "Fonts": "字體",
+    "Screen Sizes": "螢幕尺寸",
+    "Spacing & Sizing": "間距與尺寸",
+    "Minimization": "最小化",
     "Lazy Loading": "延遲載入",
     "Pre-rendering": "提前渲染",
     "Documentation": "文件",
@@ -106,7 +112,6 @@
     "Keyframes": "關鍵影格 Keyframes",
     "Compiler": "編譯器",
     "Color": "前景色 Color",
-    "Colors": "色彩 Colors",
     "Selectors": "選取器 Selectors",
     "Functions": "函式 Functions",
     "Breakpoints": "響應式斷點 Breakpoints",
@@ -116,7 +121,6 @@
     "Core Syntax": "核心語法",
     "Animations": "動畫 Animations",
     "Variables": "變數 Variables",
-    "Fonts": "字體 Fonts",
     "Theme Modes": "主題模式",
     "Supports": "支援依賴 Supports",
     "Appearance": "外觀 Appearance",
