--- a/website/i18n/tw.json
+++ b/website/i18n/tw.json
@@ -12,6 +12,7 @@
     "Comparison": "比較",
     "Production Optimization": "效能優化",
     "Variables & Modes": "變數與模式",
+    "Design Variables": "設計變數",
     "Colors": "色彩",
     "Fonts": "字體",
     "Screen Sizes": "螢幕尺寸",
